--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="/brasil">Dados do Brasil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/alemanha">Dados da Alemanha</a>
+                <a class="nav-link" href="/lituania">Dados da Lituânia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">Sobre o Experimento</a>
