--- a/templates/data.html
+++ b/templates/data.html
@@ -3,8 +3,8 @@
 <main>
     <div class="container-fluid  text-center m-3">
         <div class="row">
-    {% if content == "alemanha" %}
-            <h1 class="display my-5"> Dados da Alemanha </h1>
+    {% if content == "lituania" %}
+            <h1 class="display my-5"> Dados da Lituânia </h1>
             <div class="col m-3">
                 <h2> Temperatura </h2>
                 <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1567731/widgets/485017"></iframe>
