--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                 <p class="border border-warning p-3 rounded-3">
                     
                     O protótipo consiste em coletar dados de temperatura, umidade relativa do ar e qualidade do ar em duas localidades diferentes, uma das plataformas está localizada no Brasil,
-                    na Universidade de Campinas e outra na cidade de Münster, na Alemanha. Os dados são atualizados em tempo real e são coletados constantemente. A proposta é que você utilize estes dados
+                    na Universidade de Campinas e outra na cidade de Vilnius, na Lituânia. Os dados são atualizados em tempo real e são coletados constantemente. A proposta é que você utilize estes dados
                     para analisar e comparar as possíveis diferenças nos dados entre estas duas localidades.</p>
             </div>
            </div>
